@@ -35,7 +35,7 @@
                 "content": "big movie",
                 "format": "dvd",
                 "frameAspect": "16:9",
-                "id": 1,
+                "id": 0,
                 "language": "ENG",
                 "retailPrice": 9.99,
                 "runTime": 120,
@@ -57,7 +57,7 @@
                 "content": "big big movie",
                 "format": "bluray",
                 "frameAspect": "16:9",
-                "id": 2,
+                "id": 0,
                 "language": "ENG",
                 "retailPrice": 13.99,
                 "runTime": 655,
@@ -148,7 +148,7 @@
                     }
                 ],
                 "format": "boxset",
-                "id": 3,
+                "id": 0,
                 "language": "",
                 "retailPrice": 25.99
             },
@@ -156,7 +156,7 @@
                 "audioFormat": "DTS",
                 "format": "dsdvd",
                 "frameAspect": "4:3",
-                "id": 3,
+                "id": 0,
                 "language": "ENG",
                 "retailPrice": 55.98,
                 "runTime": 326,
