@@ -45,7 +45,6 @@ namespace TrekStar
         {
             auto model = this->GetModel();
 
-            std::cout << "ID: " << std::to_string(model->GetId()) << ", ";
             std::cout << "Format: " << model->GetFormat() << std::endl;
         }
 
