@@ -40,3 +40,7 @@
 [2019-04-24 13:50:38.012] [logger] [info] Material 2 was added to project A Great Movie
 [2019-04-24 13:50:38.012] [logger] [info] Material 3 was added to project A Great Movie
 [2019-04-24 13:50:38.012] [logger] [info] Material 3 was added to project A Great Movie
+[2019-04-24 14:13:35.617] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 14:13:35.617] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 14:13:35.617] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 14:13:35.617] [logger] [info] Material 0 was added to project A Great Movie
